tests/NormalTests/paczka1/fuzzy1/15538532.err
Error in line 10: rDvs0 S93 51,6
Error in line 14: rDvs0 A50 70,4
Error in line 20: PzQG A140 3(,3
Error in line 21: Lgv A140 81,6
